# secret-language-app-sets

./: .env-demo  README.md  convert.py  convert_data.md  convert_data.py  dev_requirements.txt  publish.py  pyproject.toml  serve.py  typetarget.md
data/: 000_basic_shamy_sentence_example.json  001_ajp_sentences_from_tatoeba.json  demo_task_set_data.json  italian_expressions.json  minimal_example.json  natural_sentences_1.json  natural_sentences_2.json  natural_sentences_3.json  natural_sentences_4.json  natural_sentences_5.json  احكي.json  جلال.json  حابب.json  موضوع.json  ولاد.json
doc/inspiration/: django_models_from_yt_video.md
doc/legacy/: 002_set_from_yt_video.py  old_convert_data.md
misc/: 000_common_english_sentences_as_apc_resource_sets.py  001_levantine_words.py  002_levanti_dataset_sentences_as_immersion_content.py  004_lisaanmasry_examples.py  004b_lisaanmasry_space_fixer.py  005_integrate_tatoeba_sentences.py  006_vocab_with_img_and_sound_mandarin.py  006b_add_real_audio.py  007_mandarin_character_deck.py  008_vocab_with_img_and_sound_generalized.py  009_mulan_vocab.py  009b_mulan_vocab_pinyin.py  009c_mulan_fix.py  010_hsk1_vocab.py  011_make_mandarin_character_components_set.py  999_make_index.py
other_data/: language_tags.json
public/: _headers  index.json  languages.json  minimal_example.json
public/apc/: index.json  natural_sentences_1.json  natural_sentences_2.json
public/arz/: index.json
public/cmn/: index.json
public/deu/: index.json
public/it/: index.json  italian_expressions.json
scripts/: 001_sentence_data_from_tatoeba.py
(+932 files in other folders)
