[tool.poetry]
name = "secret-language-app-sets"
version = "0.1.0"
description = ""
authors = ["Kolja Sam <github@koljapluemer.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4"
wordfreq = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
